# sinyi-search-mcp

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml  run_crawler.sh  run_report.sh  板橋三房搜尋結果.html
src/house_search_mcp/: __init__.py  api.py  crawler.py  report.py  server.py
src/sinyi_search_mcp/: __init__.py  api.py  server.py
tools/: pyproject.toml
tools/src/house_search_tools/: __init__.py
