[project]
name = "house-search-mcp"
version = "0.2.0"
description = "房屋物件搜尋 MCP Server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
house-search-mcp = "house_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
