[project]
name = "house-search-mcp"
version = "0.3.1"
description = "買屋快搜 — 房屋物件搜尋 MCP Server for Claude Desktop / Codex CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "real-estate", "house-search", "claude", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/tonywang0122/house-search-mcp"
Repository = "https://github.com/tonywang0122/house-search-mcp"

[project.scripts]
house-search-mcp = "house_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
